# fastapi-backend

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  backend.code-workspace  backend_pre_start.py  main.py  prestart.sh  pylintrc  pyproject.toml  tests-start.sh
.github/workflows/: alpha_devlin-master.yml  dev_devlinduldulaofastapidev.yml  main_devlin-master.yml  main_devlinduldulao1149.yml  main_devlinduldulaofastapi1017.yml  prod_cicd.yml
api/: config.py  dependencies.py
api/api_v1/: api.py
api/api_v1/endpoints/: graph.py  hello_world.py  hello_world_multi_auth.py
core/: config.py
src/app/: backend_pre_start.py  initial_data.py  main.py  tests_pre_start.py
src/app/alembic/: env.py
src/app/alembic/versions/: 100c6f2af670_add_a_column.py  8c68f4c16a17_add_column_last_name_to_user_model.py
src/app/features/greetings/: api.py
src/app/features/greetings/endpoints/: graph.py  hello_world.py  hello_world_multi_auth.py
src/app/features/posts/: models.py  posts_router.py  posts_routes.py  routes.py  services.py
src/app/features/users/: models.py  services.py  users_routes.py
src/app/helpers/: config.py  db.py  dependencies.py  models.py
src/app/schemas/: models.py
