[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Devlin Duldulao <webmasterdevlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pydantic-extra-types = "^2.6.0"
codegen = "^1.0"
tenacity = "^8.2.3"
python-multipart = "^0.0.9"
psycopg = {extras = ["binary"], version = "^3.1.18"}
httpx = "^0.27.0"
cachetools = "^5.3.3"
ruff = "^0.4.1"
fastapi-azure-auth = "^4.3.1"
sqlmodel = "0.0.18"
sqlalchemy = "^2.0.29"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-asyncio = "0.21.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.7.0"
pytest = "^8.2.0"
pylint = "^3.1.0"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "alembic", "__pycache__"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic", ".git", "__pycache__", ".mypy_cache", ".pytest_cache"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
